--- a/html/index.html
+++ b/html/index.html
@@ -122,7 +122,72 @@
                     </div>
                 </div>
             </div>
+        </section>
 
+        <section class="flow" id="interactive-element">
+            <h2 class="numbered-title">
+                <span>03</span>
+                Interactive Element
+            </h2>
+
+            <!--* Navigation -->
+            <div>
+                <nav>
+                    <ul class="primary-navigation underline-indicators flex ff-sans-cond">
+                        <li class="active">
+                            <a class="uppercase text-white letter-spacing-2" href="#">
+                                <span>00</span>
+                                Active
+                            </a>
+                        </li>
+                        <li>
+                            <a class="uppercase text-white letter-spacing-2" href="#">
+                                <span>01</span>
+                                Hovered
+                            </a>
+                        </li>
+                        <li>
+                            <a class="uppercase text-white letter-spacing-2" href="#">
+                                <span>02</span>
+                                Idle
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+
+            </div>
+
+            <div class="flex">
+                <div style="margin-top:5rem;">
+                    <a href="#" class="large-button uppercase ff-serif fs-600 text-dark bg-white"> Explore</a>
+                </div>
+
+                <divc class="flow" style="margin-bottom: 50vh; --flow-space: 4rem">
+                    <!--* Tabs -->
+                    <div class="tab-list underline-indicators flex">
+                        <button aria-selected="true" class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond">Moon</button>
+                        <button aria-selected="false" class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond">Mars</button>
+                        <button aria-selected="false" class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond">Europa</button>
+                    </div>
+
+                    <!--* Dots -->
+                    <div class="dot-indicators flex">
+                        <button aria-selected="true"><span class="sr-only">Slide title</span></button>
+                        <button aria-selected="false"><span class="sr-only">Slide title</span></button>
+                        <button aria-selected="false"><span class="sr-only">Slide title</span></button>
+                    </div>
+
+                    <!--* Numbers -->
+                    <div class="number-indicators ff-serif fs-500 flow">
+                        <button aria-selected="true" class="text-white"><span class="sr-only">Number title</span>1</button>
+                        <button aria-selected="false" class="text-white"><span class="sr-only">Slide title</span>2</button>
+                        <button aria-selected="false" class="text-white"><span class="sr-only">Slide title</span>3</button>
+                    </div>
+                    <!-- <div style="margin-top:5rem;">
+                        <a href="#" class="large-button uppercase ff-serif fs-600 text-dark bg-white"> 1</a>
+                    </div> -->
+                </div>
+            </div>
         </section>
     </div>
 </body>
