--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
   
-  <title>Frontend Mentor | Space tourism website</title>
+  <title>Space tourism website</title>
 </head>
 <body class="home">
 
@@ -31,10 +31,11 @@
     </nav>
   </header>
 
-  <div class="grid-container">
+  <div class="grid-container grid-container--home">
     <div>
       <h1 class="text-accent letter-spacing-1 fs-500 ff-sans-cond uppercase">
-        So, you want to travel to <span class="fs-900 ff-serif text-white">Space</span>
+        So, you want to travel to 
+        <span class="d-block fs-900 ff-serif text-white">Space</span>
       </h1>
       <p>
         Let’s face it; if you want to go to space, you might as well genuinely go to
@@ -44,7 +45,7 @@
     </div>
     
     <div>
-      <a href="#" class="large-button uppercase ff-serif fs-600 text-dark bg-white"> Explore</a>
+      <a href="#" class="large-button uppercase ff-serif text-dark bg-white"> Explore</a>
     </div>
   </div>
 
