--- a/html/index.html
+++ b/html/index.html
@@ -14,9 +14,10 @@
   <link rel="stylesheet" href="../css/style.css">
   
   <title>Space tourism website</title>
-  <script src="./index.js" defer></script>
+  <script src="../scripts/index.js" defer></script>
 </head>
 <body class="home">
+  <a class="skip-to-content" href="#main">Skip to content</a>
 
   <header class="primary-header flex">
     <div>
@@ -30,15 +31,15 @@
     
     <nav>
       <ul id="primary-navigation" data-visible="false" class="primary-navigation underline-indicators flex">
-        <li class="active"><a class="uppercase text-white letter-spacing-2" href="index.html"><span>00</span>Home</a>
-        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="destination.html"><span>01</span>Destination</a>
-        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="crew.html"><span>02</span>Crew</a>
-        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="technology.html"><span>03</span>Technology</a>
+        <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="index.html"><span>00</span>Home</a>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="destination.html"><span aria-hidden="true">01</span>Destination</a>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="crew.html"><span aria-hidden="true">02</span>Crew</a>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="technology.html"><span aria-hidden="true">03</span>Technology</a>
       </ul>
     </nav>
   </header>
 
-  <div class="grid-container grid-container--home">
+  <main id="main" class="grid-container grid-container--home">
     <div>
       <h1 class="text-accent letter-spacing-1 fs-500 ff-sans-cond uppercase">
         So, you want to travel to 
@@ -54,7 +55,7 @@
     <div>
       <a href="#" class="large-button uppercase ff-serif text-dark bg-white"> Explore</a>
     </div>
-  </div>
+  </main>
 
  
 
