--- a/html/destination-pages/destination-moon.html
+++ b/html/destination-pages/destination-moon.html
@@ -52,13 +52,16 @@
       Pick your destination
     </h1>
 
-    <img src="../../assets/destination/image-moon.png" alt="the moon">
+    <picture>
+      <source srcset="../../assets/destination/image-moon.webp" type="image/webp">
+      <img src="../../assets/destination/image-moon.png" alt="the moon">
+    </picture>
 
     <div class="tab-list underline-indicators flex">
-      <button aria-selected="true" class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond">Moon</button>
-      <button aria-selected="false" class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond">Mars</button>
-      <button aria-selected="false" class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond">Europa</button>
-      <button aria-selected="false" class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond">Titan</button>
+      <button aria-selected="true" class="uppercase text-accent letter-spacing-2 ff-sans-cond">Moon</button>
+      <button aria-selected="false" class="uppercase text-accent letter-spacing-2 ff-sans-cond">Mars</button>
+      <button aria-selected="false" class="uppercase text-accent letter-spacing-2 ff-sans-cond">Europa</button>
+      <button aria-selected="false" class="uppercase text-accent letter-spacing-2 ff-sans-cond">Titan</button>
     </div>
 
     <article class="destination-info">
