active tab navigation fixed

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div>
-      <a href="destination-pages/destination.html" class="large-button uppercase ff-serif text-dark bg-white">
+      <a href="./html/destination-pages/destination.html" class="large-button uppercase ff-serif text-dark bg-white">
         Explore</a>
     </div>
   </main>
