--- a/html/destination-pages/destination.html
+++ b/html/destination-pages/destination.html
@@ -32,9 +32,9 @@
 
       <nav>
         <ul id="primary-navigation" data-visible="false" class="primary-navigation underline-indicators flex">
-          <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2"
+          <li><a class="ff-sans-cond uppercase text-white letter-spacing-2"
               href="../index.html"><span>00</span>Home</a></li>
-          <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="../destination-pages/destination.html"><span
+          <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="../destination-pages/destination.html"><span
                 aria-hidden="true">01</span>Destination</a></li>
           <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="../crew-pages/crew.html"><span
                 aria-hidden="true">02</span>Crew</a></li>
